--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ alert("Todo es monetizado en pesos mexicanos");
 <br>
 <img src="E:\imag\yukii.jpeg" alt="yukii" width="200" height="200" />
 <h1>Miauyuki Postres</h1>
-<img src="E:\imag\flan.jpg" alt="Chocoflan" width="200" height="150" />
+<img src="E:\imag\flan.jpg" alt="flan" width="200" height="150" />
 <h2>Flan</h2>
 <table>
 <tr>
